# l3zawi

giskard_msgs/: CMakeLists.txt  package.xml
giskard_msgs/action/: Move.action  World.action
giskard_msgs/msg/: CollisionEntry.msg  ExecutionState.msg  GiskardError.msg  LinkName.msg  MotionStatechartNode.msg  Weights.msg  WorldBody.msg
giskard_msgs/srv/: DyeGroup.srv  GetGroupInfo.srv  GetGroupNames.srv
giskardpy_ros/: .gitignore  README.md  jazzy.repos  package.xml  setup.cfg  setup.py
giskardpy_ros/.github/docker/humble/: Dockerfile
giskardpy_ros/.github/docker/jazzy/: Dockerfile
giskardpy_ros/.github/workflows/: ci_standalone.yml  publish_dockerfiles.yml  reusable_robot_ci.yml
giskardpy_ros/data/spoon/urdf/: spoon.urdf
giskardpy_ros/giskardpy_ros/: __init__.py
giskardpy_ros/giskardpy_ros/configs/: behavior_tree_config.py  giskard.py  robot_interface_config.py
giskardpy_ros/giskardpy_ros/configs/iai_robots/: boxy.py  donbot.py  hsr.py  pr2.py  stretch.py  tiago.py  tracy.py
giskardpy_ros/giskardpy_ros/configs/other_robots/: armar.py  generic.py  justin.py
giskardpy_ros/giskardpy_ros/goals/: realtime_goals.py
giskardpy_ros/giskardpy_ros/python_interface/: python_interface.py
giskardpy_ros/giskardpy_ros/ros2/: event_loop_manager.py  msg_converter.py  my_multithreaded_executor.py  ros2_interface.py  ros_msg_visualization.py  ros_timer.py  rospy.py  tfwrapper.py
giskardpy_ros/giskardpy_ros/tree/: blackboard_utils.py
giskardpy_ros/giskardpy_ros/tree/behaviors/: action_server.py  append_zero_velocity.py  cleanup.py  collision_checker.py  collision_scene_updater.py  debug_marker_publisher.py  exception_to_execute.py  goal_canceled.py  goal_received.py  instantaneous_controller.py  plugin.py  (+26 more)
giskardpy_ros/giskardpy_ros/utils/: asynio_utils.py  utils.py  utils_for_tests.py
giskardpy_ros/launch/: giskardpy_hsr_standalone.launch.py  giskardpy_pr2_standalone.launch.py  giskardpy_tracy_standalone.launch.py  giskardpy_tracy_velocity.launch.py
giskardpy_ros/scripts/: generic_giskard.py  generic_giskard_standalone.py  tracy_standalone.py  tracy_velocity.py
giskardpy_ros/scripts/examples/: casadi_example.py  casadi_example2.py
giskardpy_ros/scripts/tools/: collision_matrix_tool.py  interactive_marker.py  joystick_e_stop.py  motion_statechart_inspector.py
giskardpy_ros/self_collision_matrices/iai/: tracy.srdf
giskardpy_ros/test/: __init__.py  conftest.py  test_integration_boxy.py  test_integration_donbot.py  test_integration_hsr.py  test_integration_hsr_mujoco_closed_loop.py  test_integration_justin.py  test_integration_pr2.py  test_integration_pr2_mujoco.py  test_integration_pr2_mujoco_closed_loop.py  test_integration_tiago_stand_alone.py  test_integration_tracebot.py
iai_tracy-ros2-jazzy/iai_tracy/: CMakeLists.txt  package.xml
iai_tracy-ros2-jazzy/iai_tracy_bringup/: CMakeLists.txt  package.xml
iai_tracy-ros2-jazzy/iai_tracy_bringup/launch/: tracy_w_robotiq_85.launch.py
iai_tracy-ros2-jazzy/iai_tracy_description/: CMakeLists.txt  package.xml
iai_tracy-ros2-jazzy/iai_tracy_description/launch/: display.launch.py
iai_tracy-ros2-jazzy/iai_tracy_description/rviz2/: display.rviz
iai_tracy-ros2-jazzy/iai_tracy_description/urdf/: tracy.urdf.xacro
iai_tracy-ros2-jazzy/iai_tracy_ur/: CMakeLists.txt  package.xml
iai_tracy-ros2-jazzy/iai_tracy_ur/config/: ur10e_controllers_left.yaml  ur10e_controllers_right.yaml
semantic_world/: .gitignore  .gitmodules  README.md  file::memory:  pyproject.toml  requirements.txt
semantic_world/.github/workflows/: build_and_deploy_doc.yml  ci.yml  notebook-test-ci.yml  publish-to-pypi.yml  update_docker.yml
semantic_world/.junie/: guidelines.md
semantic_world/doc/: _config.yml  _toc.yml  conf.py  developer_guide.rst  intro.md  kinematic_world.md  references.bib  requirements.txt  style_guide.md  user_guide.md  views.md  world_reasoner.md  world_synchronization.rst
semantic_world/docker/: Dockerfile  entrypoint.sh
semantic_world/examples/: creating_custom_bodies.md  graph_of_convex_sets.md  loading_worlds.md  persistence_of_annotated_worlds.md  regions.md  views.md  visualizing_worlds.md  world_state_manipulation.md  world_structure_manipulation.md
semantic_world/resources/collision_configs/: pr2.srdf
semantic_world/resources/mjcf/: apartment.xml  kitchen-small.xml  pr2_kinematic_tree.xml  table.xml
semantic_world/resources/procthor_json/: house_987654321.json  house_test.json
semantic_world/resources/urdf/: kitchen-small.urdf  pr2_kinematic_tree.urdf  table.urdf  tracy.urdf
semantic_world/rosinstall/: semantic_world-https.rosinstall  semantic_world.rosinstall
semantic_world/scripts/: build_documentation.sh  generate_orm.py  parse_procthor_files_and_save_to_database.py  test_notebook_examples.sh
semantic_world/src/semantic_world/: __init__.py  exceptions.py  robots.py  testing.py  utils.py  world.py
semantic_world/test/: test_utils.py
semantic_world/test/test_adapters/: test_multi_parser.py  test_stl.py  test_urdf.py
semantic_world/test/test_body/: test_bodies.py  test_closest_points.py
semantic_world/test/test_casadi/: reference_implementations.py  test_casadi_wrapper.py  test_symbol_manager.py  utils_for_tests.py
semantic_world/test/test_collision_checking/: test_trimesh_detector.py
semantic_world/test/test_expert_answers/: kitchen_expert_answers_fit.json
semantic_world/test/test_factories/: test_factories.py
semantic_world/test/test_geometry/: test_shape_collections.py
semantic_world/test/test_orm/: test_orm.py
semantic_world/test/test_pipeline/: test_pipeline.py
semantic_world/test/test_procthor/: test_procthor.py
semantic_world/test/test_raytracer/: test_raytracer.py
semantic_world/test/test_robots/: test_world_pr2.py  test_world_two_arm_robot.py
semantic_world/test/test_ros/: test_world_fetcher.py  test_world_modifications.py  test_world_synchronizer.py
semantic_world/test/test_spatial_variables/: test_spatial_variables.py
semantic_world/test/test_views/: test_views.py
semantic_world/test/test_worlds/: test_gcs.py  test_predicates.py  test_world.py
(+116 files in other folders)
