<package format="3">
  <name>iai_tracy_description</name>
  <version>0.0.1</version>
  <description>The iai_tracy_description package</description>

  <maintainer email="jeroen.schaefer@outlook.de">Jeroen Schäfer</maintainer>

  <license>TODO</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <!-- Add other dependencies as needed -->
  <!-- <exec_depend>some_runtime_dependency</exec_depend> -->
  <!-- <test_depend>gtest</test_depend> -->

  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
