<package format="3">
  <name>iai_tracy_ur</name>
  <version>0.0.0</version>
  <description>Universal Robot Driver configuration files for the tracy robot</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="iai@ai.uni-bremen.de">Institute for Artificial Intelligence</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <!-- Add other dependencies as needed -->
  <!-- <exec_depend>some_runtime_dependency</exec_depend> -->
  <!-- <test_depend>gtest</test_depend> -->

  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
